Fix CSS text alignment and remove Turbopack from production build

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,21 +122,6 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-tap-highlight-color: transparent;
   }
-  
-  /* מרכוז כל הטקסט באתר */
-  h1, h2, h3, h4, h5, h6, p, div, span, a, li, ul, ol {
-    text-align: center;
-  }
-  
-  /* מרכוז טפסים */
-  form, input, textarea, select, button {
-    text-align: center;
-  }
-  
-  /* מרכוז תפריטים */
-  nav, ul, li {
-    text-align: center;
-  }
 }
 
 @layer components {
